refactor: 위치기반 제보 가져오기 수정
실종등록된 제보를 제외하도록 변경