@@ -6,7 +6,6 @@ import com.ktc.togetherPet.exception.CustomException;
 import com.ktc.togetherPet.model.dto.oauth.OauthUserDTO;
 import com.ktc.togetherPet.model.dto.report.ReportCreateRequestDTO;
 import com.ktc.togetherPet.model.dto.report.ReportDetailResponseDTO;
-import com.ktc.togetherPet.model.dto.report.ReportNearByResponseDTO;
 import com.ktc.togetherPet.model.dto.report.ReportResponseDTO;
 import com.ktc.togetherPet.model.entity.Breed;
 import com.ktc.togetherPet.model.entity.Missing;
@@ -18,7 +17,6 @@ import com.ktc.togetherPet.repository.ReportRepository;
 import jakarta.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -86,28 +84,20 @@ public class ReportService {
             ).toList();
     }
 
-    public List<ReportNearByResponseDTO> getReportsByLocation(double latitude, double longitude) {
+    public List<ReportResponseDTO> getReportsByLocation(double latitude, double longitude) {
         Location location = new Location(latitude, longitude);
         long regionCode = kakaoMapService.getRegionCodeFromKakao(location);
 
-        /** XXX: 이 부분 missing이 null인 경우에 받을 지 아니면 전체 리포트를 받을 지 상의 필요
-         * missing이 null인 것만 받아옴 = 실종신고자에게 제보한 것은 제외함 = findAllByRegionCodeAndMissingNotNull
-         * 전체 리포트를 받아옴 = 실종신고자에게 제보한 것도 포함함 = findAllByRegionCode
-         **/
-        return reportRepository.findAllByRegionCode(regionCode)
+        return reportRepository.findAllByRegionCodeAndMissingNull(regionCode)
             .stream()
-            .map(report -> {
-                String representImagePath = imageService.getRepresentativeImageById(
-                    REPORT, report.getId());
-                return new ReportNearByResponseDTO(
+            .map(report -> new ReportResponseDTO(
                     report.getId(),
                     report.getLocation().getLatitude(),
                     report.getLocation().getLongitude(),
-                    representImagePath
-                );
-            })
-            .collect(Collectors.toList());
-
+                    imageService.getRepresentativeImageById(REPORT, report.getId())
+                )
+            )
+            .toList();
     }
 
     public ReportDetailResponseDTO getReportById(long reportId) {
